@@ -483,9 +483,9 @@ int sig;
 #endif
 
 #ifdef MSWIN32
-  extern GC_bool GC_is_win32s();
+extern GC_bool GC_no_win32_dlls;
 #else
-# define GC_is_win32s() FALSE
+# define GC_no_win32_dlls FALSE
 #endif
 
 void GC_init_inner()
@@ -637,7 +637,7 @@ void GC_init_inner()
       GC_pcr_install();
 #   endif
 #   if !defined(SMALL_CONFIG)
-      if (!GC_is_win32s() && 0 != GETENV("GC_ENABLE_INCREMENTAL")) {
+      if (!GC_no_win32_dlls && 0 != GETENV("GC_ENABLE_INCREMENTAL")) {
 	GC_ASSERT(!GC_incremental);
         GC_setpagesize();
 #       ifndef GC_SOLARIS_THREADS
@@ -681,7 +681,7 @@ void GC_enable_incremental GC_PROTO(())
     LOCK();
     if (GC_incremental) goto out;
     GC_setpagesize();
-    if (GC_is_win32s()) goto out;
+    if (GC_no_win32_dlls) goto out;
 #   ifndef GC_SOLARIS_THREADS
         GC_dirty_init();
 #   endif
